tls-secrets/depl.yml
apiVersion: v1
kind: Namespace
metadata:
  name: secret

---

apiVersion: apps/v1
kind: Deployment
metadata:
  name: go-pg
  namespace: secret
spec:
  strategy: 
    type: Recreate
  replicas: 1
  selector:
    matchLabels:
      app: go-pg
  template:
    metadata:
      labels:
        app: go-pg
    spec:
      containers:
      - name: server
        image: bazdoc/go-pg:1.0
        ports:
        - containerPort: 8000
          name: web
