tls-secrets/svc.yml
apiVersion: v1
kind: Service
metadata:
  namespace: secret
  name: pg-svc
spec:
  selector:
    app: go-pg
  ports:
    - protocol: TCP
      port: 8080
      targetPort: 8000
