tls-secrets/ing.yml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: go-pg-ing
  namespace: secret
spec:
  ingressClassName: nginx
  rules:
  - host: secret.test
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: pg-svc
            port:
              number: 8080    
  tls:
    - hosts:
      - secret.test
      secretName: tls-secret
